--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: java -jar /santander-dev.week-2023/target/santander-dev.week-2023-0.0.1-SNAPSHOT.jar
+web: java -jar santander-dev.week-2023-0.0.1-SNAPSHOT.jar
